<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.glego.municipiouraba.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arboletes_50"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText style="@style/EditTextStyle"
        android:id="@+id/username"
        android:hint="@string/username"/>
    <EditText style="@style/EditTextStyle"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <EditText style="@style/EditTextStyle"
        android:id="@+id/repassword"
        android:hint="@string/retype_password"
        android:inputType="textPassword"/>
    <EditText style="@style/EditTextStyle"
        android:id="@+id/email"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="cancelClicked"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:onClick="registerClicked"/>
    </LinearLayout>
</LinearLayout>
